Revert "Fix whitespace issue caused by table height in Profile"
This reverts commit 1ffc94682ad483a14d7438c8debd12e3459e0420.

--- a/src/App.css
+++ b/src/App.css
@@ -21,7 +21,7 @@
 
   }
   .app {
-    min-height: 100vh;
+    height: 100vh;
     /*max-width: 1366px;*/
     width: 100%;
     margin: auto;
@@ -105,7 +105,7 @@
   }
   
   .app-body {
-    min-height: 100vh;
+    height: 100vh;
  
   }
   
